[gd_scene load_steps=20 format=2]

[ext_resource path="res://levels/level_1/scn_obj_ShelfClock.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_1/scr_level_1.gd" type="Script" id=2]
[ext_resource path="res://PLAYER/scn_player_animated.tscn" type="PackedScene" id=3]
[ext_resource path="res://scn_scenes/scn_ObjectBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://scn_scenes/scn_sceneborder.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/0_UIother/scn_transitionScreenBlack.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/level_1/scn_obj_Window.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/level_1/scn_obj_PC.tscn" type="PackedScene" id=8]
[ext_resource path="res://levels/level_1/scn_obj_Clock.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/level_1/scn_obj_Rain.tscn" type="PackedScene" id=10]
[ext_resource path="res://levels/level_1/scn_obj_bed.tscn" type="PackedScene" id=11]
[ext_resource path="res://spr_sprites/spr_character/char_lv01_standing/charBlue_0003.png" type="Texture" id=12]
[ext_resource path="res://spr_sprites/spr_character/char_lv01_standing/charBlue_0001.png" type="Texture" id=13]
[ext_resource path="res://spr_sprites/spr_character/char_lv01_standing/charBlue_0005.png" type="Texture" id=14]
[ext_resource path="res://levels/level_1/scn_obj_BackToMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://levels/level_1/scn_obj_cactus.tscn" type="PackedScene" id=16]
[ext_resource path="res://levels/level_1/scn_char_sitting.tscn" type="PackedScene" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="level_1" type="Node2D"]
script = ExtResource( 2 )
changeScene = "res://scn_scenes/scn_BaseScene.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -59.9324
margin_top = -47.9458
margin_right = 1787.07
margin_bottom = 1079.05
color = Color( 0.901961, 0.886275, 0.878431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sceneborder" parent="." instance=ExtResource( 5 )]

[node name="TransitionScreenBlack" parent="." instance=ExtResource( 6 )]

[node name="ObjectBase" parent="." instance=ExtResource( 4 )]
position = Vector2( 861.731, -645.385 )

[node name="obj_Cactus" parent="." instance=ExtResource( 16 )]
position = Vector2( 1216.49, 221.691 )

[node name="obj_Clock" parent="." instance=ExtResource( 9 )]
position = Vector2( 199.561, 188.87 )
scale = Vector2( 1.8, 1.8 )
findable = true

[node name="obj_PC" parent="." instance=ExtResource( 8 )]
position = Vector2( 1410.42, 755.445 )
scale = Vector2( 2, 2 )

[node name="obj_ShelfClock" parent="." instance=ExtResource( 1 )]
position = Vector2( 1404.76, 275.957 )
scale = Vector2( 2, 2 )

[node name="obj_Window" parent="." instance=ExtResource( 7 )]
position = Vector2( 800, 450 )
scale = Vector2( 2, 2 )

[node name="obj_Rain" parent="." instance=ExtResource( 10 )]
position = Vector2( 797.755, 447.755 )
scale = Vector2( 2, 2 )

[node name="BlueCharacter" type="AnimatedSprite" parent="."]
position = Vector2( 800, 500 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlueCharacter"]
anims/fade_out = SubResource( 2 )

[node name="Timer" type="Timer" parent="BlueCharacter"]
one_shot = true

[node name="obj_bed" parent="." instance=ExtResource( 11 )]
position = Vector2( 700, 520 )

[node name="char_sitting" parent="." instance=ExtResource( 17 )]
position = Vector2( 650.918, 567.194 )

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="obj_BackToMenu" parent="." instance=ExtResource( 15 )]
position = Vector2( 1503.42, 75.6887 )
scale = Vector2( 2, 2 )
scene = "res://levels/scn_BaseScene.tscn"

[node name="scn_player_anim" parent="." instance=ExtResource( 3 )]
position = Vector2( 800, 525 )
[connection signal="clock_found" from="obj_Clock" to="obj_Window" method="_on_obj_Clock_clock_found"]
[connection signal="sig_ObjInteractable" from="obj_Clock" to="scn_player_anim" method="_on_obj_Clock_sig_ObjInteractable"]
[connection signal="sig_position" from="obj_Clock" to="scn_player_anim" method="_on_obj_Clock_sig_position"]
[connection signal="pc_found" from="obj_PC" to="obj_ShelfClock" method="_on_obj_PC_pc_found"]
[connection signal="sig_ObjInteractable" from="obj_PC" to="scn_player_anim" method="_on_obj_PC_sig_ObjInteractable"]
[connection signal="sig_position" from="obj_PC" to="scn_player_anim" method="_on_obj_PC_sig_position"]
[connection signal="shelfclock_found" from="obj_ShelfClock" to="obj_Cactus" method="_on_obj_ShelfClock_shelfclock_found"]
[connection signal="shelfclock_found" from="obj_ShelfClock" to="obj_Rain" method="_on_obj_ShelfClock_shelfclock_found"]
[connection signal="sig_ObjInteractable" from="obj_ShelfClock" to="scn_player_anim" method="_on_obj_ShelfClock_sig_ObjInteractable"]
[connection signal="sig_position" from="obj_ShelfClock" to="scn_player_anim" method="_on_obj_ShelfClock_sig_position"]
[connection signal="sig_ObjInteractable" from="obj_Window" to="scn_player_anim" method="_on_obj_Window_sig_ObjInteractable"]
[connection signal="sig_position" from="obj_Window" to="scn_player_anim" method="_on_obj_Window_sig_position"]
[connection signal="window_found" from="obj_Window" to="obj_PC" method="_on_obj_Window_window_found"]
[connection signal="rain_found" from="obj_Rain" to="." method="_on_obj_Rain_rain_found"]
[connection signal="rain_found" from="obj_Rain" to="char_sitting" method="_on_obj_Rain_rain_found"]
[connection signal="rain_found" from="obj_Rain" to="obj_bed" method="_on_obj_Rain_rain_found"]
[connection signal="sig_ObjInteractable" from="obj_Rain" to="scn_player_anim" method="_on_obj_Rain_sig_ObjInteractable"]
[connection signal="sig_position" from="obj_Rain" to="scn_player_anim" method="_on_obj_Rain_sig_position"]
[connection signal="timeout" from="BlueCharacter/Timer" to="." method="_on_Timer_timeout"]
[connection signal="bed_appeared" from="obj_bed" to="obj_BackToMenu" method="_on_obj_bed_bed_appeared"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_TransitionTimer_timeout"]
[connection signal="object_found" from="obj_BackToMenu" to="." method="_on_obj_BackToMenu_object_found"]
[connection signal="sig_ObjInteractable" from="obj_BackToMenu" to="scn_player_anim" method="_on_obj_BackToMenu_sig_ObjInteractable"]
[connection signal="sig_position" from="obj_BackToMenu" to="scn_player_anim" method="_on_obj_BackToMenu_sig_position"]
